# yaru

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cog.toml  justfile
.claude/commands/: create-issue.md  create-pr.md  smart-commit.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  infrastructure.md  refactoring.md
.github/workflows/: ci.yml  claude.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
docs/: ddd-clean-architecture.md  gof-design-patterns.md  gof-refactoring-opportunities.md
entity/: Cargo.toml  prelude.rs  tags.rs  task_tags.rs  tasks.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20251231_013331_create_tasks_and_tags_tables.rs  m20260101_010000_add_completed_at_to_tasks.rs  seeder.rs
src/: cli.rs  command.rs  commands.rs  config.rs  display.rs  domain.rs  entity.rs  error.rs  infrastructure.rs  json.rs  lib.rs  main.rs  repository.rs  sqlite_repository.rs  tag.rs  task.rs  todo.rs
src/application/: dto.rs  use_cases.rs
src/application/dto/: mod.rs  stats_dto.rs  tag_dto.rs  task_dto.rs
src/application/use_cases/: tag.rs  task.rs
src/application/use_cases/tag/: add_tag.rs  delete_tag.rs  edit_tag.rs  list_tags.rs  mod.rs  show_tag.rs
src/application/use_cases/task/: add_task.rs  delete_task.rs  edit_task.rs  list_tasks.rs  mod.rs  search_tasks.rs  show_stats.rs  show_task.rs
src/command/tag/: add.rs  delete.rs  edit.rs  list.rs  show.rs
src/command/task/: add.rs  delete.rs  edit.rs  list.rs  show.rs  stats.rs
src/commands/: add.rs  delete.rs  list.rs  tag.rs
src/commands/tag/: add.rs  delete.rs  list.rs  show.rs
src/commands/task/: add.rs  delete.rs  list.rs  show.rs
src/display/: format.rs  table.rs
src/domain/: mod.rs  services.rs  tag.rs  tag_old.rs  task.rs
src/domain/services/: task_statistics_service.rs
src/domain/tag/: aggregate.rs  mod.rs  repository.rs  value_objects.rs
src/domain/tag/value_objects/: tag_description.rs  tag_id.rs  tag_name.rs
src/domain/task/: aggregate.rs  events.rs  mod.rs  repository.rs  specification.rs  value_objects.rs
src/domain/task/value_objects/: due_date.rs  mod.rs  (+7 more)
src/entity/: tags.rs  task_tags.rs  tasks.rs
src/infrastructure/: config.rs  database.rs  mod.rs
src/infrastructure/config/: app_config.rs  mod.rs
src/infrastructure/database/: connection.rs
src/interface/: cli.rs  mod.rs  persistence.rs  presentation.rs  tui.rs
src/interface/cli/: args.rs  display.rs  mod.rs  tag_handler.rs  task_handler.rs
src/interface/persistence/: in_memory.rs  sea_orm.rs
src/interface/tui/: app.rs  event.rs  mod.rs  ui.rs
src/repository/: tag.rs  tag_repository.rs  task.rs  task_repository.rs  todo_repository.rs
(+11 files in other folders)
