[package]
name = "yaru"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.42"
indicatif = "0.18.3"
console = "0.16.2"
comfy-table = "7.2.1"
toml = "0.8"
inquire = { version = "0.9.1", features = ["editor"] }

[dev-dependencies]
tempfile = "3.14"
