[workspace]
members = [".", "migration"]

[package]
name = "yaru"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.148"
chrono = { version = "0.4.42", features = ["serde"] }
indicatif = "0.18.3"
console = "0.16.2"
comfy-table = "7.2.1"
toml = "0.9"
inquire = { version = "0.9.1", features = ["editor"] }
sea-orm = { version = "1.1.2", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
] }
tokio = { version = "1.42", features = ["rt", "macros"] }
migration = { path = "migration" }

[dev-dependencies]
tempfile = "3.24"
